# py-crude-resource-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yaml  build.yml
examples/: exit_code.py  longer_threads.py  loopy.py  no-name.py  polars-example.py  polars-multiprocessing-example.py  threads.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: colors.ts  data.ts  main.ts  plot.ts  style.css  util.ts
src/: export.rs  main.rs  resources.rs  stacktraces.rs  tracker.rs  types.rs  view.rs
src/export/: firefox.rs  html.rs
