[package]
name = "py-crude-resource-monitor"
version = "0.3.0"
edition = "2021"
license = "MIT"

[features]
unwind = ["py-spy/unwind"]

[dependencies]
anyhow = "1.0.97"
clap = "4.5.35"
env_logger = "0.11.8"
log = "0.4.27"
py-spy = { version = "0.4.0" }
serde_json = "1.0.140"
sysinfo = "0.34.2"
serde = { version = "1.0.219", features = ["derive"] }
dialoguer = "0.11.0"
tokio = { version = "1.44.1", features = ["full"] }
axum = { version = "0.8.3", features = ["macros"] }
rust-embed = "8.6.0"
mime_guess = "2.0.5"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tower = { version = "0.5.2", features = ["util"] }
snafu = { version = "0.8.5", features = ["std"] }
flate2 = "1.1.1"
base64 = "0.22.1"
ctrlc = "3.4.6"
fxprof-processed-profile = "0.8.1"

[target.'cfg(target_os = "macos")'.dependencies]
users = "0.11.0"
shlex = "1.3.0"
