[package]
name = "py-crude-resource-monitor"
version = "0.3.1"
edition = "2024"
license = "MIT"

[features]
unwind = ["py-spy/unwind"]

[dependencies]
anyhow = "1.0.98"
clap = "4.5.40"
env_logger = "0.11.8"
log = "0.4.27"
py-spy = { git = "https://github.com/I-Al-Istannen/py-spy", rev = "e1cba46188b04d4c6e065be41011bb9ecbe982a5" }
serde_json = "1.0.140"
sysinfo = "0.35.2"
serde = { version = "1.0.219", features = ["derive"] }
dialoguer = "0.11.0"
tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
rust-embed = "8.7.2"
mime_guess = "2.0.5"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tower = { version = "0.5.2", features = ["util"] }
snafu = { version = "0.8.6", features = ["std"] }
flate2 = "1.1.2"
base64 = "0.22.1"
ctrlc = "3.4.7"
fxprof-processed-profile = "0.8.1"

[target.'cfg(target_os = "macos")'.dependencies]
users = "0.11.0"
shlex = "1.3.0"

[lints]
rust.unsafe_code = { level = "deny", priority = 1 }
# Lint groups
rust.deprecated_safe = "warn"
rust.future_incompatible = "warn"
rust.keyword_idents = "warn"
rust.rust_2018_idioms = "warn"
rust.unused = "warn"
# Individual lints
rust.non_local_definitions = "warn"
rust.redundant_imports = "warn"
rust.redundant_lifetimes = "warn"
rust.single_use_lifetimes = "warn"
rust.unit_bindings = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
# Clippy
clippy.use_self = "warn"
clippy.result_large_err = "allow"
